# pocketclinic

./: .gitignore  README.md  agents.py  app.py  main.py  masumi.yml  pyproject.toml  requirements.txt  server.py  tasks.py
api/: main.py  models.py
pocket_clinic_tools/: audio_utils.py  referral_dispatcher.py  symptom_collector.py  triage_symptoms.py
tests/: test_api_single.py  test_referral_dispatch.py  test_symptom_collector.py  test_triage_symptoms.py
